feat(security): integrar Keycloak y refactorizar DTOs
Agrega dependencias de Spring Security, OAuth2 Resource Server y Keycloak Admin Client. Elimina configuración CORS manual. Refactoriza nombres de campos en DTOs y entidades para consistencia (idUsuario→id, pacienteId→idPaciente, etc.). Añade relación doctor en Cita y Disponibilidad. Actualiza repositorios con queries personalizadas. Corrige enum Estado en OdontogramaEstado (CORONO→CORONA).